src/test/deca/context/invalid/method_wrong_class_return_type.deca
/*
    Description : Méthode retournant un objet d'une classe différente de celle dans sa signature

    Résultat : Erreur contextuelle
*/
class A{}
class B{}
class C{
    A y(){
        B b = new B();
        return b;
    }
}
